--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -160,7 +160,7 @@ h2{
     width: auto;
 }
 .author-word{
-    width: 50rem ;
+    width: 50% ;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
